# blaze-binary

./: .ghci  .gitignore  AUTHORS  Attoget.hs  Benchmarks.hs  BoundedDecode.hs  GenericBinary.hs  LICENSE  Makefile  README  README.md  attoget.cabal  binary.cabal  blaze-binary.cabal  myghci.sh
Attoget/: AttoDecode.hs  BoundedDecode.hs  Hybrid.hs
bench/: Benchmark.hs  Benchmarks.hs  GenericBenchmarks.hs  blaze-binary-bench.cabal
doc/: unfinished_blogpost.md
lib/attoparsec-1.10.0.2/: attoparsec.cabal
src/: AttoDecode.hs  Attoget.hs  Benchmarks.hs  DRY.hs  DecodeError.hs  Utf8.hs
src-blaze/: ROADMAP
src-blaze/Data/Binary/: Builder.hs  Put.hs
src-blaze/Data/Binary/Builder/: ByteString.hs  Internal.hs
src-blaze/Data/Binary/Builder/Internal/: Buffer.hs  Types.hs  Write.hs
src-blaze/Data/Binary/Encoding/: Storable.hs  Word.hs
src/Codec/: MsgPack.hs
src/Codec/MsgPack/: CaseDist.hs  Decoder.hs  Encoder.hs
src/Data/Binary/: Put.hs
src/Data/Blaze/: Binary.hs
src/Data/Blaze/Binary/: Decoder.hs  Decoding.hs  Encoder.hs  Encoding.hs  IterDecoding.hs  PDecoding.hs  ParamDecoding.hs  StreamDecoding.hs
src/Data/Blaze/Binary/Alt/: LazyStreamDecoding.hs  ParamUnboxedDecoding.hs  UnboxedDecoding.hs
