name:                   blaze-binary
version:                0.1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Simon Meier <iridcode@gmail.com>
maintainer:             Simon Meier <iridcode@gmail.com>
category:               Data
stability:              experimental
build-type:             Simple
cabal-version:          >= 1.6
synopsis:               A binary serialization library

description:
  A binary serialization library, similar to binary and cereal,
  but with better performance and support for inspecting the primitive stream
  of values representing an encoded Haskell value.

extra-source-files:
  LICENCE

source-repository head
  type:     git
  location: git://github.com/meiersi/blaze-binary.git

library
        build-depends:          base               == 4.*
                              , bytestring         == 0.9.*
                              , bytestring-builder == 0.1.*
                              , containers         == 0.4.*
                              , array              >= 0.3   && < 0.5
                              , ghc-prim

        hs-source-dirs:         src

        exposed-modules:        
                                Data.Blaze.Binary
                                Data.Blaze.Binary.Encoder
                                Data.Blaze.Binary.Decoder

        ghc-options:            -Wall
        ghc-prof-options:       -prof -auto-all

        if impl(ghc >= 7.2.1)
            cpp-options: -DGENERICS

benchmark bench
  type:              exitcode-stdio-1.0
  main-is:           Benchmarks.hs
  hs-source-dirs:    bench, src
  build-depends:     base               >= 4      && < 5
                   , ghc-prim           >= 0.2    && < 0.3
                   , containers         >= 0.4    && < 0.5
                   , array              >= 0.4    && < 0.5
                   , bytestring         >= 0.9    && < 0.10
                   , criterion          >= 0.6    && < 0.7
                   , cereal             >= 0.3    && < 0.4
  -- Use the 'cps' branch from https://github.com/kolmodin/binary.git
  -- for binary-0.6.0.0
                   , binary             >= 0.6    && < 0.7
  -- The 'master' branch from git://github.com/meiersi/bytestring-builder.git
                   , bytestring-builder >= 0.1    && < 0.2
                   , deepseq            >= 1.3    && < 1.4
                   , primitive          >= 0.4    && < 0.5
                   , attoparsec         >= 0.10   && < 0.11

  if impl(ghc >= 7.2.1)
    cpp-options: -DGENERICS
