name:                blaze-binary-bench
version:             0.1.0.0
synopsis:            Benchmarks for the blaze-binary library
-- description:         
homepage:            git://github.com/meiersi/blaze-binary.git
license:             BSD3
license-file:        LICENSE
author:              Simon Meier <iridcode@gmail.com>
maintainer:          Simon Meier <iridcode@gmail.com>
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable blaze-binary-bench
  main-is:           Benchmark.hs
  hs-source-dirs:    src .
  -- Currently we are benchmarking with GHC 7.4.1
  build-depends:     base
                   , ghc-prim
                   , containers == 0.4.*
                   , array      == 0.4.*
                   , bytestring == 0.9.*
                   , criterion
                   , cereal     == 0.3.*
             -- The 'cps' branch from https://github.com/kolmodin/binary.git
                   , binary     == 0.6.0.0
                   , bytestring-builder == 0.1.*
                   , deepseq    == 1.3.*
                   , primitive  == 0.4.*
                   , attoparsec == 0.10.*
